# snapshot-xbr

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  flake.nix
src/: discord_webhook.rs  find_pack_format.rs  index.ts  main.rs  modrinth_api.rs  mojangApi.ts  mojang_api.rs  package_zip.rs  process.rs
src/static/: pack.mcmeta
static/: pack.mcmeta
