[package]
name = "snapshot-xbr"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
xbrz-rs = "0.1.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }
bytes = "1.10.1"
tokio = { version = "1.47.1", features = ["bytes", "full"] }
fs = "0.0.5"
