[package]
name = "snapshot-xbr"
version = "0.2.0"
edition = "2024"

[dependencies]
image = "0.25.8"
xbrz-rs = "0.1.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "blocking", "http2", "default-tls", "multipart"] }
serde = "1.0.226"
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }
bytes = "1.10.1"
regex = "1.11.2"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
futures = "0.3.31"
oxipng = "9.1.5"
rayon = "1.11.0"
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
